2013-04-29  Freddie Chopin  <freddie_chopin@op.pl>

	* libc/libc.texinfo: Fix @ references and change ifinfo to be
	ifnottexinfo.
	* libm/libm.texinfo: Ditto.

2013-04-25  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/stdio/local.h (_STDIO_CLOSE_PER_REENT_STD_STREAMS): New define.
	* libc/stdio/findfp.c (_STDIO_CLOSE_PER_REENT_STD_STREAMS): Use define.

2013-04-24  Corinna Vinschen  <vinschen@redhat.com>
	    Nick Clifton  <nickc@redhat.com>

	* libc/stdlib/strtod.c: Manual update to latest algorithm from NetBSD.

2013-04-23  Corinna Vinschen  <vinschen@redhat.com>

	Port newlib to x86_64-pc-cygwin.
	* libc/include/sys/features.h: Redefine compilation environment
	definitions for Cygwin to cover 64 bit Cygwin.
	* libc/ctype/ctype_.c (_ctype_): Fix definition for 64 bit Cygwin.
	* libc/include/machine/setjmp.h: Change definition of _JBLEN to allow
	different values for 32 bit and 64 bit Cygwin.
	* libc/include/reent.h (stat64): Define as stat under Cygwin, instead
	of as __stat64.  Undef stat64 if not building Newlib.
	* libc/include/sys/stat.h (stat64): Define as stat under Cygwin.

2013-04-22  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/include/sys/cdefs.h: Align with latest FreeBSD file header.
	* libc/include/sys/features.h (__GNUC_PREREQ__): Define.

2013-04-19  Corinna Vinschen  <vinschen@redhat.com>

	* newlib/libc/search/hash.c: Revert patch from 2012-08-08.

2013-04-16  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/sys/rtems/sys/queue.h: Delete file.
	* libc/include/sys/cdefs.h (__containerof): New define.
	(__DEQUALIFY): Likewise.
	* libc/include/sys/queue.h (TRACEBUF_INITIALIZER): Likewise.
	(TRACEBUF): Likewise.
	(LIST_FOREACH_SAFE): Likewise.
	(LIST_PREV): Likewise.
	(LIST_SWAP): Likewise.
	(QMD_LIST_CHECK_HEAD): Likewise.
	(QMD_LIST_CHECK_NEXT): Likewise.
	(QMD_LIST_CHECK_PREV): Likewise.
	(QMD_SAVELINK): Likewise.
	(QMD_TAILQ_CHECK_HEAD): Likewise.
	(QMD_TAILQ_CHECK_NEXT): Likewise.